unpackaged/main/default/objects/pcify__DetectionPattern__mdt/pcify__DetectionPattern__mdt.object-meta.xml
<CustomObject>
    <description>Create and update Detection Patterns used by PCIFY.</description>
    <label>DetectionPattern</label>
    <pluralLabel>DetectionPattern</pluralLabel>
</CustomObject>