unpackaged/main/default/objects/pcify__DetectionPattern__mdt/fields/pcify__CreditCardPattern__c.field-meta.xml
<CustomField>
    <fullName>pcify__CreditCardPattern__c</fullName>
    <defaultValue>false</defaultValue>
    <description>*If TRUE, this Detection Pattern will verify that detected credit card numbers are valid. 
*If you only want RegEx without credit card number validation (i.e. for a Social Security Number Pattern), then set this checkbox to false.</description>
    <inlineHelpText>*If TRUE, this Detection Pattern will verify that detected credit card numbers are valid. 
*If you only want RegEx without credit card number validation (i.e. for a Social Security Number Pattern), then set this checkbox to false.</inlineHelpText>
    <label>CreditCardPattern</label>
    <type>Checkbox</type>
</CustomField>