unpackaged/main/default/objects/pcify__DetectionPattern__mdt/fields/pcify__Description__c.field-meta.xml
<CustomField>
    <fullName>pcify__Description__c</fullName>
    <description>Description of Pattern regular expression record.</description>
    <inlineHelpText>Description of Pattern regular expression record.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>