unpackaged/main/default/objects/pcify__DetectionPattern__mdt/fields/pcify__IsActive__c.field-meta.xml
<CustomField>
    <fullName>pcify__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If unchecked this DetectionPattern will not be used to match credit card numbers or other PII.</description>
    <inlineHelpText>If unchecked this DetectionPattern will not be used to match credit card numbers or other PII.</inlineHelpText>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>