unpackaged/main/default/objects/pcify__DetectionPattern__mdt/fields/pcify__LuhnCheck__c.field-meta.xml
<CustomField>
    <fullName>pcify__LuhnCheck__c</fullName>
    <defaultValue>true</defaultValue>
    <description>*If TRUE, this Detection Pattern will verify that detected credit card numbers are valid according to the Luhn Algorithm.
*If you only want RegEx without credit card number validation (i.e. for a Social Security Number Pattern), then set this checkbox to false.</description>
    <inlineHelpText>*If TRUE, this Detection Pattern will verify that detected credit card numbers are valid according to the Luhn Algorithm.
*If you only want RegEx without credit card number validation, then set this checkbox to false.</inlineHelpText>
    <label>LuhnCheck</label>
    <type>Checkbox</type>
</CustomField>