unpackaged/main/default/objects/pcify__DetectionPattern__mdt/fields/pcify__MaskCharacter__c.field-meta.xml
<CustomField>
    <fullName>pcify__MaskCharacter__c</fullName>
    <defaultValue>&quot;*&quot;</defaultValue>
    <description>Character (e.g. * or x) used in Masking.</description>
    <inlineHelpText>Character (e.g. * or x) used in Masking.</inlineHelpText>
    <label>MaskCharacter</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>