unpackaged/main/default/objects/pcify__DetectionPattern__mdt/fields/pcify__MaskType__c.field-meta.xml
<CustomField>
    <fullName>pcify__MaskType__c</fullName>
    <defaultValue>&quot;FullMask&quot;</defaultValue>
    <description>Full Mask: all credit card number characters are masked 
**************** 
Last4: all credit card number characters are masked but the last 4 characters 
************1234 
First6andLast4: all credit card number characters are masked by the first 6 and the last 4 characters 
123456******1234</description>
    <inlineHelpText>Full Mask: all credit card number characters are masked 
Last4: all credit card number characters are masked but the last 4 characters 
First6andLast4: all credit card number characters are masked by the first 6 and the last 4 characters</inlineHelpText>
    <label>MaskType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FullMask</fullName>
                <default>true</default>
                <label>FullMask</label>
            </value>
            <value>
                <fullName>Last4</fullName>
            </value>
            <value>
                <fullName>First6andLast4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>