unpackaged/main/default/objects/pcify__DetectionPattern__mdt/fields/pcify__NegativePattern__c.field-meta.xml
<CustomField>
    <fullName>pcify__NegativePattern__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pattern for false positives (order numbers, tracking numbers, etc).</description>
    <inlineHelpText>Pattern for false positives (order numbers, tracking numbers, etc).</inlineHelpText>
    <label>Negative Pattern</label>
    <type>Checkbox</type>
</CustomField>