unpackaged/main/default/objects/pcify__DetectionPattern__mdt/fields/pcify__PartialMatch__c.field-meta.xml
<CustomField>
    <fullName>pcify__PartialMatch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PCIFY will skip entire field if a partial negative pattern match is detected.</description>
    <inlineHelpText>PCIFY will skip entire field if a partial negative pattern match is detected.</inlineHelpText>
    <label>PartialMatch</label>
    <type>Checkbox</type>
</CustomField>