unpackaged/main/default/objects/pcify__DetectionPattern__mdt/fields/pcify__Pattern__c.field-meta.xml
<CustomField>
    <fullName>pcify__Pattern__c</fullName>
    <description>Regular Expression (RegEx) used in matching for finding PII.</description>
    <inlineHelpText>Regular Expression (RegEx) used in matching for finding PII.</inlineHelpText>
    <label>Pattern</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>