unpackaged/main/default/objects/pcify__DetectionPattern__mdt/listViews/pcify__All_Detection_Patterns.listView-meta.xml
<ListView>
    <fullName>pcify__All_Detection_Patterns</fullName>
    <columns>MasterLabel</columns>
    <columns>pcify__IsActive__c</columns>
    <columns>pcify__MaskType__c</columns>
    <columns>pcify__MaskCharacter__c</columns>
    <columns>pcify__CreditCardPattern__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Detection Patterns</label>
</ListView>